enviroments/dev/deployment/ingress_ghost_and_nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ghost-and-nginx
spec:
  rules:
  - host: "service-ghost.example.com"
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /*
        backend:
          service:
            name: service-ghost
            port:
              number: 80
  - host: "service-nginx.example.com"
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /*
        backend:
          service:
            name: service-nginx
            port:
              number: 80
